# nanograd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: autoencoder_mnist.ipynb  benchmark_vs_pytorch.ipynb  cnn_visualization.ipynb  gan_2d_tutorial.ipynb  gpu_classification_demo.ipynb  loss_landscape_optimization.ipynb  mnist_cnn_tutorial.ipynb  multiclass_spirals.ipynb  nanograd_tutorial.ipynb  polynomial_regression.ipynb
nanograd/: __init__.py  loss.py  nn.py  optim.py  tensor.py
nanograd/core/: __init__.py  backend.py  tensor.py
nanograd/nn/: __init__.py  activations.py  conv.py  linear.py  loss.py  module.py
nanograd/optim/: __init__.py  adam.py  sgd.py
tests/: conftest.py  test_nn.py  test_ops.py  test_tensor.py
